[package]
name = "http_port"
version = "0.1.0"
authors = ["grotsev <denis.grotsev@gmail.com>"]

[dependencies]

# Async
futures = "0.1.7"
futures-cpupool = "0.1"
tokio-core = "0.1"
tokio-postgres = "0.3"

# HTTP client
hyper = "0.11"

# database support with connection pooling
r2d2 = "0.7"
r2d2_postgres = "0.13"

# json
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"

toml = "0.4"